--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-imask": "^7.6.1",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.5.0",
     "zod": "^3.24.2"
   },
@@ -31,6 +33,7 @@
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-input-mask": "^3.0.6",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
