--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-imask": "^7.6.1",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.5.0",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
