➕ Atualizando lib de date para evitar conflitos

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@date-io/date-fns": "^3.2.1",
+    "@date-io/dayjs": "^3.2.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.0.1",
@@ -21,7 +21,7 @@
     "ag-grid-community": "^33.2.1",
     "ag-grid-react": "^33.2.1",
     "axios": "^1.8.4",
-    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.6.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
