--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "match-sorter": "^8.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.55.0",
     "react-imask": "^7.6.1",
     "react-input-mask": "^2.0.4",
@@ -37,6 +38,7 @@
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-helmet": "^6.1.11",
     "@types/react-input-mask": "^3.0.6",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
