--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "ts-node": "^10.9.2",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
+    "util": "^0.12.5",
     "vite": "^6.2.0"
   }
 }
